--- a/motivation/app/views/user_submitted_motivations/new.html.erb
+++ b/motivation/app/views/user_submitted_motivations/new.html.erb
@@ -1,4 +1,4 @@
-<h2 class="submit-form-text">Found a video or image that motivated you? Submit it to us and we will add so that it can motivate others!</h2>
+<h2 class="submit-form-text">Found a video or image that motivated you? Submit it to us and we will add it so that it can motivate others!</h2>
 
 
 <%= form_for @usm, html: {class: "form-horizontal center"} do |f| %>
