--- a/motivation/app/views/videos/categories.html.erb
+++ b/motivation/app/views/videos/categories.html.erb
@@ -1,2 +1,3 @@
 <%= button_to "Running", video_path, method: :get, class: "general-button videos-images-button", params: {type: "RunningVideo"} %>
 <%= button_to "Weightlifting",video_path, method: :get, class: "general-button videos-images-button", params: {type:"WeightliftingVideo"} %>
+<%= button_to "Random Video", random_video_path, method: :get, class: "general-button videos-images-button", params: {video: true}%>
