--- a/motivation/app/views/images/random.html.erb
+++ b/motivation/app/views/images/random.html.erb
@@ -38,14 +38,8 @@
 			</div>
 			</aside>
 		</div>
-	<div class= "container-image-show-buttons">
-		<%= button_to image_categories_path, method: :get, class: "general-button before-navigation left" do %>
-				<span class="glyphicon glyphicon-arrow-left"></span> Back to Images 
-			<% end %>
-		<%= button_to @path, method: :get, class: "general-button before-navigation right", params: {type: @random_video_or_image} do %>
-					Give Me More Random Motivation <span class="glyphicon glyphicon-arrow-right"></span> 
-			<% end %>
-	</div>
+	<%= render partial: "shared/random_image_button" if params[:image] %>
+	<%= render partial: "shared/random_button" if params[:random] %>
 <% else %>
 	<%= render partial: "shared/image_error" %>
 <% end %>
