Add top videos and top image section. Top videos needs pagination

--- a/motivation/app/views/layouts/_header.html.erb
+++ b/motivation/app/views/layouts/_header.html.erb
@@ -1,8 +1,8 @@
 <header class="navbar navbar-default">
 	<%= link_to image_tag("give_me_motivation_logo.png", class:"give-me-motivation-logo"), root_path %>
 	<div class="header-text-left">
-		<div class="navbar-text"><%= link_to "Top Videos", "#" %></div>
-		<div class="navbar-text"><%= link_to "Top Images", "#" %></div>
+		<div class="navbar-text"><%= link_to "Top Videos", top_videos_path %></div>
+		<div class="navbar-text"><%= link_to "Top Images", top_images_path %></div>
 		<div class="navbar-text"><%= link_to "Submit a video/image", submit_path %></div>
 	</div>
 	<div class="header-text-right">
