--- a/motivation/app/assets/stylesheets/custom.css.scss
+++ b/motivation/app/assets/stylesheets/custom.css.scss
@@ -670,3 +670,11 @@ span.glyphicon.glyphicon-heart {
 	margin-top:30px;
 	text-align:center;
 }
+
+.top-images {
+	display:inline;;
+}	
+
+.display-inline {
+	display:inline-block;
+}
