--- a/motivation/app/views/favorite_videos/index.html.erb
+++ b/motivation/app/views/favorite_videos/index.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
 	<% @favorite_videos.each do |favorite| %>
   		<div class="col-xs-6 col-md-3">
-  			<div class="thumbnail">
+  			<div class="thumbnail alter-thumbnail">
   			<span class="video-title"><%= video_title(favorite[0]) %></span>
     		<%= link_to image_tag(favorite[1]), user_favorite_video_path(favorite[0].user_id, favorite[0].video_id) %>
     		<div class="caption">
