--- a/motivation/app/views/images/index.html.erb
+++ b/motivation/app/views/images/index.html.erb
@@ -1,28 +1,21 @@
 <div class="container-fluid">
 	<% @best_images.each do |image| %>
-	<div class="row thumbnail">
-		<div class="col-xs-6 col-md-4 display-inline">
+		<div class="col-xs-6 col-md-4">
+			<div class="thumbnail alter-image">
 			<h4 class="text-center">Total Favorites:<%= image.favorite_images_count%></h4>
-		</div>
-		<div class="col-xs-6 col-md-4 display-inline">
 			<%= image_tag(image.url, class: "images-index-resize") %>
-		</div>
 			<% if @user %>
 			<%= form_for([@user, @favorite]) do |f| %>
 				<%= f.hidden_field :image_id, value: image.id %>
 				<%= f.hidden_field :url, value: image.url %>
 				<%= f.hidden_field :user_id, value: @user.id %>
-				<%= f.button "Make Favorite", class: "general-button favorite" do %>
-				<div class="col-xs-6 col-md-4 display-inline">
+				<%= f.button "Make Favorite", class: "general-button favorite center alter-favorite" do %>
 		 			<span class= "glyphicon glyphicon-heart"></span>
-		 		</div>
 		 		<% end %>
 			<% end %>
 		<% else %>
-			<%= button_to new_user_path, method: :get, class: "general-button favorite", params: {favorite_sign_in: true} do %>
-				<div class="col-xs-6 col-md-4 display-inline">
+			<%= button_to new_user_path, method: :get, class: "general-button favorite center alter-favorite", params: {favorite_sign_in: true} do %>
 				 		<span class= "glyphicon glyphicon-heart"></span>
-				 	</div>
 				<% end %>
 		<% end %>
 		</div>
@@ -31,4 +24,3 @@
 </div>
 
 <%= will_paginate(@best_images, renderer: BootstrapPagination::Rails) %>
-
