Guest submitted motivations can now be viewed in the index and won't throw an error

--- a/motivation/app/views/user_submitted_motivations/index.html.erb
+++ b/motivation/app/views/user_submitted_motivations/index.html.erb
@@ -1,6 +1,9 @@
 <% i = 1 %>
 <% @user_submitted_motivations.each do |usm| %>
-	<%=i%> user:<%= usm.user.email %>
+	<%=i%>. User:<%= usm.user.email if usm.user %>
+	<% if !usm.user %>
+		Guest submitted
+	<% end %>
 </br>
 	URL: <%= link_to "Link", "http://#{usm.url}", target: "_blank" %>
 	<% i += 1 %>
