--- a/motivation/app/views/unmotivational_videos/index.html.erb
+++ b/motivation/app/views/unmotivational_videos/index.html.erb
@@ -3,7 +3,7 @@
 <%= @unmotivational_videos.each do |video| %>
   	<div class="col-xs-3 col-md-3">
   		<div class="thumbnail">
-			<%= link_to "Show Video", user_unmotivational_video_path(video.user_id, video.id)%>
+			<%= link_to "Show Video", user_unmotivational_video_path(video.user_id, video.video_id)%>
 			<%= link_to "Make motivational" {action: "destroy", controller: "unmotivational_videos", id: video.id, user_id: video.user_id}, method: :delete, data:{confirm: "Are you sure you want to delete that image off of your favorites list?"}, class: "general-button btn-danger" %>
 			<% num +=1 %>
 		</div>
