Fix bug on unmotivational index page

--- a/motivation/app/views/unmotivational_images/index.html.erb
+++ b/motivation/app/views/unmotivational_images/index.html.erb
@@ -4,7 +4,7 @@
   	<div class="col-xs-3 col-md-3">
   		<div class="thumbnail">
 			<%= num %>. <%= link_to "Show Image", user_unmotivational_image_path(image.user_id, image.image_id)%>
-			<%= link_to raw("<span class= 'glyphicon glyphicon-trash'></span>"), {action: "destroy", controller: "unmotivational_images", id: image.id, user_id: image.user_id}, method: :delete, data:{confirm: "Are you sure you want to delete that image off of your favorites list?"}, class: "general-button btn-danger" %>
+			<%= link_to raw("<span class= 'glyphicon glyphicon-trash'></span>"), {action: "destroy", controller: "unmotivational_images", id: image.id, user_id: image.user_id}, method: :delete, data:{confirm: "Are you sure you want to delete that image off of your unmotivational list?"}, class: "general-button btn-danger" %>
 				<% num += 1 %>
 			</div>
 		</div>
