--- a/motivation/app/views/unmotivational_videos/index.html.erb
+++ b/motivation/app/views/unmotivational_videos/index.html.erb
@@ -4,7 +4,7 @@
   	<div class="col-xs-3 col-md-3">
   		<div class="thumbnail">
 			<%= num %>. <%= link_to "Show Video", user_unmotivational_video_path(video.user_id, video.video_id)%>
-			<%= link_to raw("<span class= 'glyphicon glyphicon-trash'></span>"), {action: "destroy", controller: "unmotivational_videos", id: video.id, user_id: video.user_id}, method: :delete, data:{confirm: "Are you sure you want to delete that video off of your unmotivational list?"}, class: "general-button btn-danger" %>
+			<%= link_to raw("<span class= 'glyphicon glyphicon-trash'></span>"), {action: "destroy", controller: "unmotivational_videos", user_id: video.user_id, id: video.id}, method: :delete, data:{confirm: "Are you sure you want to delete that video off of your unmotivational list?"}, class: "general-button btn-danger" %>
 			<% num +=1 %>
 		</div>
 	</div>
