Reposition buttons on favorite images

--- a/motivation/app/views/favorite_images/show.html.erb
+++ b/motivation/app/views/favorite_images/show.html.erb
@@ -4,10 +4,12 @@
 	</br>
 	<h4 class="total-unmotivational-text"><span class="glyphicon glyphicon-thumbs-down"></span>: <%= @unmotivational_count %> </h4>
 </aside>
-<div class="container-image">
+<div class= "video-show-navigation-buttons">
 	<%= image_tag(@favorite_image.url, class: "image-display") %>
 	<%= button_to user_favorite_images_path, method: :get, class: "general-button before-navigation left" do %>
 			<span class="glyphicon glyphicon-arrow-left"></span> Back to Favorite Images 
 		<% end %>
+	</div>
+	<div class= "video-show-navigation-buttons">
 	<%= link_to raw("<span class= 'glyphicon glyphicon-trash'></span>"), {action: "destroy", controller: "favorite_images", id: @favorite_image.id, user_id: @favorite_image.user_id}, method: :delete, data:{confirm: "Are you sure you want to delete that image off of your favorites list?"}, class: "general-button btn-danger" %>
 </div>
