Make top images and videos linkable to show action

--- a/motivation/app/assets/stylesheets/custom.css.scss
+++ b/motivation/app/assets/stylesheets/custom.css.scss
@@ -8,10 +8,9 @@
  .video-motivate-information-container {
  	background-color:white;
  	float:right;
- 	height:490px;
- 	width:400px;
- 	margin:10px;
  	margin-right:20px;
+  	margin-top:-30px;
+ 	background-color:#F0F0F0;
  }
 
 /*****************************
@@ -405,11 +404,9 @@ iframe {
  .image-motivate-information-container {
  	background-color:white;
  	float:right;
- 	height:250px;
- 	width:400px;
- 	margin:10px;
  	margin-right:20px;
-
+ 	margin-top:-30px;
+ 	background-color:#F0F0F0;
  }
 
 .total-favorites {
