--- a/motivation/app/views/images/index.html.erb
+++ b/motivation/app/views/images/index.html.erb
@@ -3,7 +3,7 @@
 		<div class="col-xs-6 col-md-4">
 			<div class="thumbnail alter-image">
 			<h4 class="text-center">Total Favorites:<%= image.favorite_images_count%></h4>
-			<%= image_tag(image.url, class: "images-index-resize") %>
+			<%= link_to image_tag(image.url, class: "images-index-resize"), image_path(image) %>
 			<% if @user %>
 			<%= form_for([@user, @favorite]) do |f| %>
 				<%= f.hidden_field :image_id, value: image.id %>
