--- a/motivation/app/views/images/random.html.erb
+++ b/motivation/app/views/images/random.html.erb
@@ -3,6 +3,7 @@
 		<%= image_tag(@random_image.url, class: "image-display random-image") %>
 		
 		<aside class="image-motivate-information-container">
+			<h3 class="text-center">Image Information</h3>
 				<% if @user %>
 					<%= form_for([@user, @favorite]) do |f| %>
 						<%= f.hidden_field :image_id, value: @random_image.id %>
