--- a/motivation/app/views/images/show.html.erb
+++ b/motivation/app/views/images/show.html.erb
@@ -3,6 +3,7 @@
 		<%= image_tag(@image.url, class: "image-display") %>
 	
 	<aside class="image-motivate-information-container">
+		<h3 class="text-center">Image Information</h3>
 			<% if @user %>
 				<%= form_for([@user, @favorite]) do |f| %>
 					<%= f.hidden_field :image_id, value: @image.id %>
@@ -39,12 +40,18 @@
 		</aside>
 	</div>
 <div class= "container-image-show-buttons">
-	<%= button_to image_categories_path, method: :get, class: "general-button before-navigation left" do %>
+	<% if !@best_image %>
+		<%= button_to image_categories_path, method: :get, class: "general-button before-navigation left" do %>
 				<span class="glyphicon glyphicon-arrow-left"></span> Back to Images 
-		<% end %>
-	<%= button_to image_path, method: :get, class: "general-button before-navigation right", params: {type: @type}  do %>
+			<% end %>
+		<%= button_to image_path, method: :get, class: "general-button before-navigation right", params: {type: @type}  do %>
 				Give Me More Motivation <span class="glyphicon glyphicon-arrow-right"></span> 
-		<% end %>
+			<% end %>
+	<% elsif @best_image %>
+		<%= button_to top_images_path, method: :get, class: "general-button before-navigation left" do %>
+				<span class="glyphicon glyphicon-arrow-left"></span> Back to Top Images 
+			<% end %>
+	<% end %>
 	</div>
 <% else %>
 	<%= render partial: "shared/image_error" %>
