--- a/motivation/app/views/videos/index.html.erb
+++ b/motivation/app/views/videos/index.html.erb
@@ -4,7 +4,7 @@
 			<div class="thumbnail alter-thumbnail">
 			<h4 class="text-center">Total Favorites: <%= video.users.count%></h4>
   			<span class="video-title"><%= video_title(video) %></span>
-    		<%= image_tag(VideoInfo.new("https://www.youtube.com/watch?v=#{video.url}").thumbnail_medium) %>
+    		<%= link_to image_tag(VideoInfo.new("https://www.youtube.com/watch?v=#{video.url}").thumbnail_medium), video_path(video) %>
 			<% if @user %>
 			<%= form_for([@user, @favorite]) do |f| %>
 				<%= f.hidden_field :video_id, value: video.id %>
