--- a/motivation/app/views/favorite_videos/show.html.erb
+++ b/motivation/app/views/favorite_videos/show.html.erb
@@ -1,18 +1,17 @@
-<h2 class= "video_title text-center"><%= @favorite_video_title.title%></h2>
+<h2 class= "big-video-title"><%= @favorite_video_title.title%></h2>
 <div class="iframe"><iframe width="800" height="500" src="https://www.youtube.com/embed/<%= @favorite_video.url%>" frameborder="0" allowfullscreen></iframe></div>
 
-<aside class="video-motivate-information-container">
+<aside class="video-motivate-information-container favorite-information-alter">
 	<h3 class="text-center">Video Information</h3>
-	<h4 class="total-favorites-text-videos"><span class= "glyphicon glyphicon-heart total-favorites"></span>: <%= @video_count %></h4>
+	<h4 class="favorite-video-text-adjustment"><span class= "glyphicon glyphicon-heart total-favorites"></span>: <%= @video_count %></h4>
 	</br>
-	<h4 class="total-favorites-text-videos"><span class="glyphicon glyphicon-thumbs-down"></span>: <%= @unmotivational_count %> </h4>
+	<h4 class="favorite-video-text-adjustment"><span class="glyphicon glyphicon-thumbs-down"></span>: <%= @unmotivational_count %> </h4>
+	<%= link_to raw("<span class= 'glyphicon glyphicon-trash'></span>"), {action: "destroy", controller: "favorite_images", id: @favorite_video.id, user_id: @favorite_video.user_id}, method: :delete, data:{confirm: "Are you sure you want to delete that image off of your favorites list?"}, class: "general-button btn-danger delete-image-alter" %>
 </aside>
-
-<div class= "video-show-navigation-buttons">
-	<%= button_to user_favorite_videos_path, method: :get, class: "general-button before-navigation" do %>
-			<span class="glyphicon glyphicon-arrow-left"></span> Back to Videos 
-		<% end %>
-	</div>
+<div class="clear">
 	<div class= "video-show-navigation-buttons">
-	<%= link_to raw("<span class= 'glyphicon glyphicon-trash'></span>"), {action: "destroy", controller: "favorite_videos", id: @favorite_video.id, user_id: @favorite_video.user_id}, method: :delete, data:{confirm: "Are you sure you want to delete that video off of your favorites list?"}, class: "general-button btn-danger" %>
+		<%= button_to user_favorite_videos_path, method: :get, class: "general-button before-navigation" do %>
+				<span class="glyphicon glyphicon-arrow-left"></span> Back to Videos 
+			<% end %>
+		</div>
 </div>
