--- a/motivation/app/views/unmotivational_images/show.html.erb
+++ b/motivation/app/views/unmotivational_images/show.html.erb
@@ -1,3 +1,20 @@
+
 <div class="container-image">
-	<%= image_tag(@image.url, class: "image-display") %>
+	<%= image_tag(@image.url, class: "image-display favorite-image") %>
+
+	<aside class="image-motivate-information-container favorite-image-information-adjustment">
+		<h3 class="text-center">Image Information</h3>
+		<h4 class="total-favorites-text favorite-image-text-adjustment"><span class= "glyphicon glyphicon-heart total-favorites"></span>: <%= @image_count %></h4>
+		</br>
+		<h4 class="total-unmotivational-text favorite-image-text-adjustment"><span class="glyphicon glyphicon-thumbs-down"></span>: <%= @unmotivational_count %> </h4>
+	<%= link_to raw("<span class= 'glyphicon glyphicon-trash'></span>"), {action: "destroy", controller: "favorite_images", id: @image.id, user_id: @image.user_id}, method: :delete, data:{confirm: "Are you sure you want to delete that image off of your unmotivational list?"}, class: "general-button btn-danger" %>
+
+	</aside>
+
+</div>
+
+<div class= "container-image-show-buttons">
+	<%= button_to user_unmotivational_images_path, method: :get, class: "general-button before-navigation left" do %>
+			<span class="glyphicon glyphicon-arrow-left"></span> Back to Unmotivational Images 
+		<% end %>
 </div>
