--- a/motivation/app/views/videos/random.html.erb
+++ b/motivation/app/views/videos/random.html.erb
@@ -1,10 +1,9 @@
 <% if @random_video %>
-	<h3 class="text-center"><%= @video_info.title%></h3>
+	<h3 class="big-video-title"><%= @video_info.title%></h3>
 	<div class="iframe"><iframe width="800" height="500" src="https://www.youtube.com/embed/<%= @random_video.url%>" frameborder="0" allowfullscreen></iframe></div>
 
 	<aside>
 	<div class="video-motivate-information-container">
-	</br>
 		<h3 class="text-center">Video Information</h3>
 		<% if @user %>
 			<%= form_for([@user, @favorite]) do |f| %>
