Fix split name bug on video controller

--- a/motivation/app/views/favorite_videos/show.html.erb
+++ b/motivation/app/views/favorite_videos/show.html.erb
@@ -11,7 +11,7 @@
 <div class="clear">
 	<div class= "video-show-navigation-buttons">
 		<%= button_to user_favorite_videos_path, method: :get, class: "general-button before-navigation" do %>
-				<span class="glyphicon glyphicon-arrow-left"></span> Back to Videos 
+				<span class="glyphicon glyphicon-arrow-left"></span> Back to Favorite Videos 
 			<% end %>
 		</div>
 </div>
