Changed font of all text to comic-sans

--- a/motivation/app/views/unmotivational_videos/index.html.erb
+++ b/motivation/app/views/unmotivational_videos/index.html.erb
@@ -1,4 +1,4 @@
-<h2> All videos are ordered form oldest to newest</h2>
+<h2 class="text-center"> All videos are ordered form oldest to newest</h2>
 <% num = 1 %>
 <% @unmotivational_videos.each do |video| %>
   	<div class="col-xs-3 col-md-3">
