--- a/motivation/app/assets/stylesheets/custom.css.scss
+++ b/motivation/app/assets/stylesheets/custom.css.scss
@@ -207,11 +207,11 @@
 }
 
 .navbar-text {
-	padding:16px;
+	padding:17px;
 	margin:0 auto;
-	font-family: 'PT Serif', serif;
+	font-family: "Comic Sans MS", cursive, sans-serif;
 	font-weight:bold;
-	font-size:20px;
+	font-size:18px;
 	a:link {
 		color:#777;
 		text-decoration:none;
@@ -232,7 +232,7 @@
 .give-me-motivation-logo {
 	height:60px;
 	width:125px;
-	margin-left:95px;
+
 }
 
 .header-text-right {
@@ -241,7 +241,7 @@
 		background-color:#009900;
 		transition:all 1000ms ease;
 		color:white;
-		padding:16px;
+		padding:17px;
 		margin:0 auto;
 	}
 }
@@ -252,7 +252,7 @@
 		background-color:#0052cc;
 		transition:all 1000ms ease;
 		color:white;
-		padding:16px;
+		padding:17px;
 		margin:0 auto;
 	}
 }
@@ -375,7 +375,7 @@ iframe {
 
 .big-video-title {
 	margin-left:30px;
-	font-family:'PT Serif', serif;
+	font-family:"Comic Sans MS", cursive, sans-serif;
 }
 /*********************
  Favorite Videos page
@@ -431,7 +431,7 @@ iframe {
 
 .total-favorites-text {
 	margin-right:165px;
-	font-family:'PT serif', serif;
+	font-family:"Comic Sans MS", cursive, sans-serif;
 }
 
 .make-unmotivational-button {
@@ -440,7 +440,7 @@ iframe {
 
 .total-unmotivational-text {
 	margin-right:170px;
-	font-family: 'PT serif', serif;
+	font-family: "Comic Sans MS", cursive, sans-serif;
 }
 
 
@@ -579,7 +579,7 @@ h3.text-info.thumbnail-title {
 	color:rgb(215, 0, 0);
 	text-align:center;
 	text-decoration:none;
-	font-family: 'PT serif', serif;
+	font-family: "Comic Sans MS", cursive, sans-serif;
 	&.left {
 		float:left;
 		margin-left:200px;
@@ -615,7 +615,7 @@ h3.text-info.thumbnail-title {
 .text-center {
 	display:block;
 	text-align:center;
-	font-family: 'PT Serif', serif;
+	font-family: "Comic Sans MS", cursive, sans-serif;
 }
 
 .danger-favorites {
@@ -629,7 +629,7 @@ h3.text-info.thumbnail-title {
 
 .video-title {
 	color:#44B3C2;
-	font-family:'PT Serif', serif;
+	font-family:"Comic Sans MS", cursive, sans-serif;
 	display:block;
 	text-align:center;
 	font-weight:bold;
@@ -686,7 +686,7 @@ span.glyphicon.glyphicon-heart {
 
 .submit-form-spacing {
 	margin-bottom:50px;
-	font-family: 'PT Serif', serif;
+	font-family: "Comic Sans MS", cursive, sans-serif;
 }
 
 .submit-container {
