--- a/motivation/app/views/unmotivational_images/index.html.erb
+++ b/motivation/app/views/unmotivational_images/index.html.erb
@@ -1,4 +1,4 @@
-<h2> All Images are ordered form oldest to newest</h2>
+<h2 class="text-center"> All Images are ordered form oldest to newest</h2>
 <% num = 1 %>
 <% @unmotivational_images.each do |image| %>
   	<div class="col-xs-3 col-md-3">
