--- a/motivation/app/views/users/new.html.erb
+++ b/motivation/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<div class= "container-sign-in">
+<div class= "container-log-in-sign-in">
 	   <%= form_for @user, html: {class: "form-horizontal"} do |f| %>
 	   	  <div class= "center-signin">
 		   	  	<h1 class= "sign-up">Sign up</h1>
