--- a/motivation/app/views/favorite_images/index.html.erb
+++ b/motivation/app/views/favorite_images/index.html.erb
@@ -12,4 +12,8 @@
 	<% end %>
 </div>
 
+<%= button_to user_path(current_user), method: :get, class: "general-button before-navigation" do %>
+    <span class="glyphicon glyphicon-arrow-left"></span> Back to Profile Page 
+<% end %>
+
 
