--- a/motivation/app/views/layouts/_header.html.erb
+++ b/motivation/app/views/layouts/_header.html.erb
@@ -1,24 +1,27 @@
 <header class="navbar navbar-default">
-	<%= link_to image_tag("give_me_motivation_logo.png", class:"give-me-motivation-logo"), root_path %>
+
 	<div class="header-text-left">
-		<div class="navbar-text"><%= link_to "Top Videos", top_videos_path %></div>
-		<div class="navbar-text"><%= link_to "Top Images", top_images_path %></div>
-		<div class="navbar-text"><%= link_to "Submit a video/image", submit_path %></div>
+		<%= link_to image_tag("give_me_motivation_logo.png", class:"give-me-motivation-logo"), root_path %>
+		<%= link_to "Top Videos", top_videos_path, class: "navbar-text left" %>
+		<%= link_to "Top Images", top_images_path, class: "navbar-text left" %>
+		<%= link_to "Submit a video/image", submit_path, class: "navbar-text left" %>
+
 	</div>
-	<div class="header-text-right">
-		<div class="navbar-text">
+	<div class="header-text-right">		
+			<%= link_to "About", about_path, class: "navbar-text right"%>
+
+
+
 			<% if current_user %>
-				<%= link_to current_user.email.length > 11 ? "Welcome, " + current_user.email[0..12] + "..." : "Welcome, " + current_user.email, user_path(current_user) %>
+				<%= link_to current_user.email.length > 11 ? "Welcome, " + current_user.email[0..12] + "..." : "Welcome, " + current_user.email, user_path(current_user), class: "navbar-text-right" %>
 			<% else %>
-				<%= link_to "Sign up", new_user_path  %>
-			<% end %> </div>
-		<div class="navbar-text">
+				<%= link_to "Sign up", new_user_path, class: "navbar-text right"  %>
+			<% end %>
 			<% if current_user %>
-				<%= link_to "Log out", logout_path, method: :delete %>
+				<%= link_to "Log out", logout_path, method: :delete, class: "navbar-text right" %>
 			<% else %>
-				<%= link_to "Log in", login_path%>
-			<% end %> </div>
-		<div class="navbar-text"><%= link_to "About", about_path%></div>
+				<%= link_to "Log in", login_path, class: "navbar-text right"%>
+			<% end %>
 	</div>
 </header>
 <% flash.each do |name, msg| %>
