--- a/motivation/app/views/static_pages/about.erb
+++ b/motivation/app/views/static_pages/about.erb
@@ -1,14 +1,13 @@
-<div class="jumbotron">
-	<h2 class="text-center">About</h2>
-	<p>Givememotivation.com was created in an attempt to give people a way to discover motivational material with only a few clicks.</p>
-	<p>Motivational material is divided into two sources: images and videos, and those two categories are further divided into categories such as General Motivation and Sports Motivation.</p>
-	<p>Signing up allows users to mark images or videos as "Favorites," which can always be accessed through their profile page. Users may also mark images or videos as "Unmotivational," meaning that the specific material will never show up when browsing other motivational material. Deleting images and videos from a user's motivational or favorites list can be done through their profile page.</p>
+<div class="jumbotron about-padding">
+	<p class="text-center about-text">Givememotivation.com was created to offer people a way to become motivated with only a few clicks.</p>
+	<p class="text-center about-text">Motivational material is divided into two sources: images and videos, and those two sources are divided into categories such as General Motivation and Sports Motivation.</p>
+	<p class="text-center about-text">Signing up allows users to mark images or videos as "Favorites," which can always be accessed through their profile page. Users may also mark images or videos as "Unmotivational," meaning that the specific material will never show up when browsing other motivational material. Deleting images and videos from a user's unmotivational or favorites list can be accomplished through their profile page.</p>
 </div>
-<div class="jumbotron">
-	<p class="text-center">Any suggestions or comments? Please email them to: dylynch91@gmail.com</p>
+<div class="jumbotron about-padding">
+	<p class="text-center about-text">Any suggestions or comments? Please email them to: dylynch91@gmail.com</p>
 	<%= link_to "My Github", "https://github.com/lynchd2", class: "text-center" %>
 </div>
-<div class="jumbotron">
-	<p class="text-center">Thanks for visiting!</p>
+<div class="jumbotron about-padding">
+	<p class="text-center about-text">Thanks for visiting!</p>
 </div>
 
