Change typography on all fonts. Other small changes

--- a/motivation/app/assets/stylesheets/custom.css.scss
+++ b/motivation/app/assets/stylesheets/custom.css.scss
@@ -205,7 +205,7 @@
 .navbar-text {
 	padding:17px;
 	margin:0 auto;
-	font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
+	font-family: 'Helvetica', 'Arial', sans-serif;
 	font-weight:300;
 	font-size:18px;
 	color:#777;
@@ -355,8 +355,8 @@ iframe {
 
 .big-video-title {
 	margin-left:30px;
-	font-family:"Comic Sans MS", cursive, sans-serif;
-}
+	font-family:'Helvetica', 'Arial', sans-serif;
+	}
 /*********************
  Favorite Videos page
 *********************/
@@ -411,7 +411,7 @@ iframe {
 
 .total-favorites-text {
 	margin-right:260px;
-	font-family:"Comic Sans MS", cursive, sans-serif;
+	font-family:'Helvetica', 'Arial', sans-serif;
 }
 
 .make-unmotivational-button {
@@ -420,7 +420,7 @@ iframe {
 
 .total-unmotivational-text {
 	margin-right:260px;
-	font-family: "Comic Sans MS", cursive, sans-serif;
+	font-family:'Helvetica', 'Arial', sans-serif;
 }
 
 
@@ -494,7 +494,7 @@ h1.sign-up {
 	height:100%;
 	color:white;
 	.sign-up {
-		font-family:"Josefin Slab";
+		font-family:'Helvetica', 'Arial', sans-serif;
 		font-size:50px;
 	}
 }
@@ -531,7 +531,7 @@ h3.text-info.thumbnail-title {
 	color:rgb(215, 0, 0);
 	text-align:center;
 	text-decoration:none;
-	font-family: "Comic Sans MS", cursive, sans-serif;
+	font-family: 'Helvetica', 'Arial', sans-serif;
 	&.left {
 		float:left;
 		margin-left:200px;
@@ -567,7 +567,7 @@ h3.text-info.thumbnail-title {
 .text-center {
 	display:block;
 	text-align:center;
-	font-family: "Comic Sans MS", cursive, sans-serif;
+	font-family: 'Helvetica', 'Arial', sans-serif;
 }
 
 .danger-favorites {
@@ -581,7 +581,7 @@ h3.text-info.thumbnail-title {
 
 .video-title {
 	color:#44B3C2;
-	font-family:"Comic Sans MS", cursive, sans-serif;
+	font-family:'Helvetica', 'Arial', sans-serif;
 	display:block;
 	text-align:center;
 	font-weight:bold;
@@ -638,7 +638,7 @@ span.glyphicon.glyphicon-heart {
 
 .submit-form-spacing {
 	margin-bottom:50px;
-	font-family: "Comic Sans MS", cursive, sans-serif;
+	font-family: 'Helvetica', 'Arial', sans-serif;
 }
 
 .submit-container {
@@ -650,7 +650,7 @@ span.glyphicon.glyphicon-heart {
 }
 
 .submit-form-text {
-	font-family: 'Indie Flower', cursive;
+	font-family: 'Helvetica', 'Arial', sans-serif;
 	margin-top:30px;
 	text-align:center;
 }
