--- a/motivation/app/views/layouts/_header.html.erb
+++ b/motivation/app/views/layouts/_header.html.erb
@@ -9,19 +9,17 @@
 	</div>
 	<div class="header-text-right">		
 			<%= link_to "About", about_path, class: "navbar-text right"%>
-
-
-
-			<% if current_user %>
-				<%= link_to current_user.email.length > 11 ? "Welcome, " + current_user.email[0..12] + "..." : "Welcome, " + current_user.email, user_path(current_user), class: "navbar-text-right" %>
-			<% else %>
-				<%= link_to "Sign up", new_user_path, class: "navbar-text right"  %>
-			<% end %>
 			<% if current_user %>
 				<%= link_to "Log out", logout_path, method: :delete, class: "navbar-text right" %>
 			<% else %>
 				<%= link_to "Log in", login_path, class: "navbar-text right"%>
 			<% end %>
+			<% if current_user %>
+				<%= link_to current_user.email.length > 11 ? "Welcome, " + current_user.email[0..12] + "..." : "Welcome, " + current_user.email, user_path(current_user), class: "navbar-text right" %>
+			<% else %>
+				<%= link_to "Sign up", new_user_path, class: "navbar-text right"  %>
+			<% end %>
+
 	</div>
 </header>
 <% flash.each do |name, msg| %>
